First submission completed

--- a/LJ_DS3_Kaggle_Competition.ipynb
+++ b/LJ_DS3_Kaggle_Competition.ipynb
@@ -363,6 +363,36 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "gl6RPNpYjuIA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1cfd572a-ebf6-492a-ebac-4793128e522b"
+      },
+      "source": [
+        "train.shape, train_y.shape, test.shape"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((59400, 41), (59400, 2), (14358, 40))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "uRIA48VNRnB6",
         "colab_type": "code",
         "colab": {
@@ -433,14 +463,201 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "oZPjl0ldieCE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        },
+        "outputId": "e9cf4ede-93ef-4f98-dde1-b07532a972d3"
+      },
+      "source": [
+        "# fast first baseline\n",
+        "\n",
+        "train_y[\"status_group\"].value_counts(normalize=True)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "functional                 0.543081\n",
+              "non functional             0.384242\n",
+              "functional needs repair    0.072677\n",
+              "Name: status_group, dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bXOzI4u3jHSx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1622d2fd-6909-42cf-c279-03fbd48bc99b"
+      },
+      "source": [
+        "# going to combine train_y with train for ease\n",
+        "\n",
+        "train = pd.merge(train, train_y)\n",
+        "train.shape"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(59400, 41)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "vrZFaIUpSAV7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 194
+        },
+        "outputId": "f304f7c3-fb0e-49a2-8ee3-b960445a2e3d"
+      },
+      "source": [
+        "# starting with a simple logistic regression model using only numeric columns\n",
+        "# and simple inputer to handle nulls\n",
+        "\n",
+        "numeric_columns = train.select_dtypes(include=\"number\").columns\n",
+        "numeric_columns.tolist()"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['id',\n",
+              " 'amount_tsh',\n",
+              " 'gps_height',\n",
+              " 'longitude',\n",
+              " 'latitude',\n",
+              " 'num_private',\n",
+              " 'region_code',\n",
+              " 'district_code',\n",
+              " 'population',\n",
+              " 'construction_year']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gng9C7UqkIYC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 90
+        },
+        "outputId": "dca09761-486a-424b-f6b4-39b81e1693b7"
+      },
+      "source": [
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "\n",
+        "features = numeric_columns\n",
+        "target = \"status_group\"\n",
+        "\n",
+        "X_train = train[features]\n",
+        "y_train = train[target]\n",
+        "X_test = test[features]\n",
+        "\n",
+        "imputer = SimpleImputer()\n",
+        "X_train_imputed = imputer.fit_transform(X_train)\n",
+        "X_test_imputed = imputer.transform(X_test)\n",
+        "\n",
+        "log_reg = LogisticRegression(solver=\"lbfgs\")\n",
+        "log_reg.fit(X_train_imputed, y_train)\n",
+        "\n",
+        "log_reg.score(X_train_imputed, y_train)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:460: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
+            "  \"this warning.\", FutureWarning)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.550993265993266"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WknR-Yo6nD0X",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# starting with a simplel model using only numeric columns\n",
+        "# going to submit baseline\n",
         "\n",
-        "numeric_columns = train.select_dtypes(include=\"number\").columns"
+        "y_pred = log_reg.predict(X_test)\n",
+        "\n",
+        "sample_submission = pd.read_csv('https://raw.githubusercontent.com/livjab/DS3-Kaggle-Comptetion/master/sample_submission.csv')\n",
+        "submission = sample_submission.copy()\n",
+        "submission['status_group'] = y_pred\n",
+        "\n",
+        "from google.colab import files\n",
+        "submission.to_csv('LJ-first-submission.csv', index=False)\n",
+        "files.download('LJ-first-submission.csv')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nLBeVrWfoTBe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
