Completed second submission

--- a/LJ_DS3_Kaggle_Competition.ipynb
+++ b/LJ_DS3_Kaggle_Competition.ipynb
@@ -654,6 +654,163 @@
       "metadata": {
         "id": "nLBeVrWfoTBe",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 137
+        },
+        "outputId": "d96ab223-99eb-4086-d8f3-fa4189875f2f"
+      },
+      "source": [
+        "# let's up the ante with xgboost classifier\n",
+        "\n",
+        "from xgboost import XGBClassifier\n",
+        "from sklearn.model_selection import cross_validate\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "scores = cross_validate(XGBClassifier(max_depth=7, n_estimators=300),\n",
+        "                       X_train,\n",
+        "                       y_train,\n",
+        "                       scoring=\"accuracy\",\n",
+        "                       cv=3,\n",
+        "                       return_train_score=True,\n",
+        "                       return_estimator=True)\n",
+        "\n",
+        "pd.DataFrame(scores)\n"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>fit_time</th>\n",
+              "      <th>score_time</th>\n",
+              "      <th>estimator</th>\n",
+              "      <th>test_score</th>\n",
+              "      <th>train_score</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>48.872952</td>\n",
+              "      <td>2.043689</td>\n",
+              "      <td>XGBClassifier(base_score=0.5, booster='gbtree'...</td>\n",
+              "      <td>0.694040</td>\n",
+              "      <td>0.792626</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>48.636371</td>\n",
+              "      <td>2.058673</td>\n",
+              "      <td>XGBClassifier(base_score=0.5, booster='gbtree'...</td>\n",
+              "      <td>0.694444</td>\n",
+              "      <td>0.798864</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>49.446329</td>\n",
+              "      <td>2.166826</td>\n",
+              "      <td>XGBClassifier(base_score=0.5, booster='gbtree'...</td>\n",
+              "      <td>0.695253</td>\n",
+              "      <td>0.797374</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    fit_time  score_time  ... test_score  train_score\n",
+              "0  48.872952    2.043689  ...   0.694040     0.792626\n",
+              "1  48.636371    2.058673  ...   0.694444     0.798864\n",
+              "2  49.446329    2.166826  ...   0.695253     0.797374\n",
+              "\n",
+              "[3 rows x 5 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xC95PrBVv-PN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "f5fcafd6-544b-40e8-c7d7-250cbdcb8cc1"
+      },
+      "source": [
+        "boost = XGBClassifier(max_depth=7, n_estimators=300)\n",
+        "boost.fit(X_train, y_train)\n",
+        "\n",
+        "y_pred = boost.predict(X_test)"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['functional', 'functional', 'functional', ..., 'functional',\n",
+              "       'functional', 'non functional'], dtype=object)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zAzQ4dBOypVw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "sample_submission = pd.read_csv('https://raw.githubusercontent.com/livjab/DS3-Kaggle-Comptetion/master/sample_submission.csv')\n",
+        "submission = sample_submission.copy()\n",
+        "submission['status_group'] = y_pred\n",
+        "\n",
+        "from google.colab import files\n",
+        "submission.to_csv('LJ-second-submission.csv', index=False)\n",
+        "files.download('LJ-second-submission.csv')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s2O0D4vr294F",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
