Started working on cleaning and encoding data

--- a/LJ_DS3_Kaggle_Competition.ipynb
+++ b/LJ_DS3_Kaggle_Competition.ipynb
@@ -636,7 +636,7 @@
       "source": [
         "# going to submit baseline\n",
         "\n",
-        "y_pred = log_reg.predict(X_test)\n",
+        "y_pred = log_reg.predict(X_test_imputed)\n",
         "\n",
         "sample_submission = pd.read_csv('https://raw.githubusercontent.com/livjab/DS3-Kaggle-Comptetion/master/sample_submission.csv')\n",
         "submission = sample_submission.copy()\n",
@@ -658,7 +658,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 137
         },
-        "outputId": "d96ab223-99eb-4086-d8f3-fa4189875f2f"
+        "outputId": "444ce246-8729-4e4a-f3b5-dab941cb84bf"
       },
       "source": [
         "# let's up the ante with xgboost classifier\n",
@@ -667,8 +667,8 @@
         "from sklearn.model_selection import cross_validate\n",
         "from sklearn.metrics import accuracy_score\n",
         "\n",
-        "scores = cross_validate(XGBClassifier(max_depth=7, n_estimators=300),\n",
-        "                       X_train,\n",
+        "scores = cross_validate(XGBClassifier(max_depth=8, n_estimators=100),\n",
+        "                       X_train_imputed,\n",
         "                       y_train,\n",
         "                       scoring=\"accuracy\",\n",
         "                       cv=3,\n",
@@ -677,7 +677,7 @@
         "\n",
         "pd.DataFrame(scores)\n"
       ],
-      "execution_count": 29,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -711,27 +711,27 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>48.872952</td>\n",
-              "      <td>2.043689</td>\n",
+              "      <td>19.238595</td>\n",
+              "      <td>0.632749</td>\n",
               "      <td>XGBClassifier(base_score=0.5, booster='gbtree'...</td>\n",
-              "      <td>0.694040</td>\n",
-              "      <td>0.792626</td>\n",
+              "      <td>0.690859</td>\n",
+              "      <td>0.758889</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>48.636371</td>\n",
-              "      <td>2.058673</td>\n",
+              "      <td>19.086328</td>\n",
+              "      <td>0.640668</td>\n",
               "      <td>XGBClassifier(base_score=0.5, booster='gbtree'...</td>\n",
-              "      <td>0.694444</td>\n",
-              "      <td>0.798864</td>\n",
+              "      <td>0.692121</td>\n",
+              "      <td>0.760101</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>49.446329</td>\n",
-              "      <td>2.166826</td>\n",
+              "      <td>19.160680</td>\n",
+              "      <td>0.663962</td>\n",
               "      <td>XGBClassifier(base_score=0.5, booster='gbtree'...</td>\n",
-              "      <td>0.695253</td>\n",
-              "      <td>0.797374</td>\n",
+              "      <td>0.687626</td>\n",
+              "      <td>0.759419</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -739,9 +739,9 @@
             ],
             "text/plain": [
               "    fit_time  score_time  ... test_score  train_score\n",
-              "0  48.872952    2.043689  ...   0.694040     0.792626\n",
-              "1  48.636371    2.058673  ...   0.694444     0.798864\n",
-              "2  49.446329    2.166826  ...   0.695253     0.797374\n",
+              "0  19.238595    0.632749  ...   0.690859     0.758889\n",
+              "1  19.086328    0.640668  ...   0.692121     0.760101\n",
+              "2  19.160680    0.663962  ...   0.687626     0.759419\n",
               "\n",
               "[3 rows x 5 columns]"
             ]
@@ -749,7 +749,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 34
         }
       ]
     },
@@ -758,34 +758,16 @@
       "metadata": {
         "id": "xC95PrBVv-PN",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "f5fcafd6-544b-40e8-c7d7-250cbdcb8cc1"
+        "colab": {}
       },
       "source": [
-        "boost = XGBClassifier(max_depth=7, n_estimators=300)\n",
-        "boost.fit(X_train, y_train)\n",
+        "boost = XGBClassifier(max_depth=8, n_estimators=100)\n",
+        "boost.fit(X_train_imputed, y_train)\n",
         "\n",
-        "y_pred = boost.predict(X_test)"
+        "y_pred = boost.predict(X_test_imputed)"
       ],
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array(['functional', 'functional', 'functional', ..., 'functional',\n",
-              "       'functional', 'non functional'], dtype=object)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 30
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -809,12 +791,222 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "kpaGAgCwJ0v8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 285
+        },
+        "outputId": "05c0b317-7e30-48e9-8bf1-affbce5966e4"
+      },
+      "source": [
+        "!pip install category_encoders"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting category_encoders\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/6e/a1/f7a22f144f33be78afeb06bfa78478e8284a64263a3c09b1ef54e673841e/category_encoders-2.0.0-py2.py3-none-any.whl (87kB)\n",
+            "\u001b[K     |████████████████████████████████| 92kB 3.4MB/s \n",
+            "\u001b[?25hRequirement already satisfied: scipy>=0.19.0 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (1.2.1)\n",
+            "Requirement already satisfied: numpy>=1.11.3 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (1.16.3)\n",
+            "Requirement already satisfied: statsmodels>=0.6.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (0.9.0)\n",
+            "Requirement already satisfied: scikit-learn>=0.20.0 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (0.20.3)\n",
+            "Requirement already satisfied: patsy>=0.4.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (0.5.1)\n",
+            "Requirement already satisfied: pandas>=0.21.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (0.24.2)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from patsy>=0.4.1->category_encoders) (1.12.0)\n",
+            "Requirement already satisfied: pytz>=2011k in /usr/local/lib/python3.6/dist-packages (from pandas>=0.21.1->category_encoders) (2018.9)\n",
+            "Requirement already satisfied: python-dateutil>=2.5.0 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.21.1->category_encoders) (2.5.3)\n",
+            "Installing collected packages: category-encoders\n",
+            "Successfully installed category-encoders-2.0.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "s2O0D4vr294F",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "# Would like to create a model that includes all features\n",
+        "# Will need to do some serious cleaning/encoding of categorical features"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3db5DONbMK5V",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# drop \"id\" because it is random\n",
+        "\n",
+        "X_train = train.drop(columns=\"id\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Uk4G5HMTMzmD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "142dc247-276a-4007-9ce9-5e0347956059"
+      },
+      "source": [
+        "train.amount_tsh.isnull().sum()"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HQ4FWpUzNbEs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4954242e-4eee-4b24-a4a0-de2156fd43d3"
+      },
+      "source": [
+        "train.date_recorded.dtypes"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('O')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "STQ4wKKWRbYG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        },
+        "outputId": "1adc4054-6605-4627-b42c-9da293edcf01"
+      },
+      "source": [
+        "train.date_recorded.describe()"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "count          59400\n",
+              "unique           356\n",
+              "top       2011-03-15\n",
+              "freq             572\n",
+              "Name: date_recorded, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lNU-0PbBRr2X",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "54013172-7d99-47fe-eae6-5c6283da0af6"
+      },
+      "source": [
+        "train.date_recorded.isnull().sum()"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YS67HLhr-etN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import category_encoders as ce\n",
+        "\n",
+        "X_train = train.drop(columns=\"status_group\")\n",
+        "y_train = train[\"status_group\"]\n",
+        "\n",
+        "\n",
+        "imputer = SimpleImputer()\n",
+        "X_train_imputed = imputer.fit_transform(X_train)\n",
+        "X_test_imputed = imputer.transform(X_test)\n",
+        "\n",
+        "\n",
+        "scores = cross_validate(XGBClassifier(max_depth=5, n_estimators=100),\n",
+        "                       X_train_imputed,\n",
+        "                       y_train,\n",
+        "                       scoring=\"accuracy\",\n",
+        "                       cv=3,\n",
+        "                       return_train_score=True,\n",
+        "                       return_estimator=True)\n",
+        "\n",
+        "pd.DataFrame(scores)"
       ],
       "execution_count": 0,
       "outputs": []
